--- a/p8105_hw6_kkc2146.md
+++ b/p8105_hw6_kkc2146.md
@@ -231,23 +231,42 @@ Results for R Squared Values
 r_squared_boot = boot_straps %>% 
   mutate(
     models = map(strap_sample, ~lm(tmax ~ tmin, data = .x)), 
-    results = map(models, broom::tidy)) %>% 
+    results = map(models, broom::glance)) %>% 
   select(-strap_sample, -models) %>% 
   unnest(results)
 r_squared_boot
 ```
 
-    ## # A tibble: 10,000 × 6
-    ##    strap_number term        estimate std.error statistic   p.value
-    ##           <int> <chr>          <dbl>     <dbl>     <dbl>     <dbl>
-    ##  1            1 (Intercept)     7.10    0.216       32.9 8.09e-111
-    ##  2            1 tmin            1.05    0.0164      64.1 5.21e-200
-    ##  3            2 (Intercept)     7.27    0.241       30.1 7.44e-101
-    ##  4            2 tmin            1.02    0.0175      58.2 3.40e-186
-    ##  5            3 (Intercept)     6.89    0.223       30.9 1.29e-103
-    ##  6            3 tmin            1.06    0.0164      64.8 1.51e-201
-    ##  7            4 (Intercept)     6.83    0.213       32.1 4.44e-108
-    ##  8            4 tmin            1.07    0.0162      65.9 3.95e-204
-    ##  9            5 (Intercept)     7.79    0.230       33.9 1.61e-114
-    ## 10            5 tmin            1.02    0.0170      59.7 1.06e-189
-    ## # … with 9,990 more rows
+    ## # A tibble: 5,000 × 13
+    ##    strap_number r.squared adj.r.squared sigma statistic   p.value    df logLik
+    ##           <int>     <dbl>         <dbl> <dbl>     <dbl>     <dbl> <dbl>  <dbl>
+    ##  1            1     0.920         0.920  2.77     4162. 5.93e-201     1  -888.
+    ##  2            2     0.904         0.904  3.06     3412. 1.15e-186     1  -925.
+    ##  3            3     0.903         0.902  3.03     3363. 1.24e-185     1  -922.
+    ##  4            4     0.907         0.907  3.01     3533. 3.78e-189     1  -919.
+    ##  5            5     0.883         0.883  3.26     2748. 2.08e-171     1  -948.
+    ##  6            6     0.914         0.913  2.85     3841. 3.74e-195     1  -899.
+    ##  7            7     0.907         0.907  3.13     3558. 1.17e-189     1  -933.
+    ##  8            8     0.916         0.915  2.78     3943. 4.79e-197     1  -890.
+    ##  9            9     0.912         0.912  3.00     3774. 6.96e-194     1  -918.
+    ## 10           10     0.926         0.926  2.79     4575. 7.58e-208     1  -891.
+    ## # … with 4,990 more rows, and 5 more variables: AIC <dbl>, BIC <dbl>,
+    ## #   deviance <dbl>, df.residual <int>, nobs <int>
+
+``` r
+r_squared_boot %>% 
+ggplot(aes(x = r.squared)) + geom_density()
+```
+
+<img src="p8105_hw6_kkc2146_files/figure-gfm/unnamed-chunk-12-1.png" width="90%" />
+
+Calculate 95% Confidence Interval.
+
+``` r
+CI_rsquared = r_squared_boot %>% 
+  summarize(
+    ci_lower = quantile(r.squared, 0.025), 
+    ci_upper = quantile(r.squared, 0.975))
+```
+
+The confidence interval for r-squared is (0.8941777- 0.9271884).
